Bug 465536 - Desktop icons disappear on wake up from sleep
Summary: Desktop icons disappear on wake up from sleep
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Folder View widget (other bugs)
Version First Reported In: 5.26.90
Platform: Arch Linux Linux
: VHI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression, wayland-only
Depends on:
Blocks:
 
Reported: 2023-02-10 08:20 UTC by Pawel
Modified: 2023-03-27 18:11 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.1
Sentry Crash Report:


Attachments
lscreen-console bug (16.62 KB, text/plain)
2023-02-13 08:45 UTC, Pawel
Details
plasma.desktop-appletsrc (13.08 KB, text/plain)
2023-02-13 08:46 UTC, Pawel
Details
kscreen-console-bug (16.62 KB, text/plain)
2023-02-13 18:37 UTC, Pawel
Details
plasma.desktop-appletsrc-v2 (12.56 KB, text/plain)
2023-02-13 18:42 UTC, Pawel
Details
journalctl log after the crash (20.71 KB, text/plain)
2023-02-13 19:43 UTC, Enrico
Details
attachment-4142586-0.html (1.43 KB, text/html)
2023-03-09 08:42 UTC, Valerio Galdo
Details
attachment-1340654-0.html (1.92 KB, text/html)
2023-03-22 17:15 UTC, Valerio Galdo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pawel 2023-02-10 08:20:01 UTC
I can reproduce this 100%. I have a few folders and files on my desktop and they don't seem to be restored when I wake the computer up from sleep.  The desktop is responsive but adding new entries doesn't work - e.g. right click Create New -> text file does not seem to have any effect; refreshing the desktop doesn't do anything either. 

Navigating to /home/user/Desktop/ in Dolphin does show the expected desktop files and folders as well as the text file created in the previous paragraph.

running the below restores the desktop files:

> $ plasmashell --replace </dev/null &>/dev/null & disown


Operating System: Arch Linux 
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Kernel Version: 6.1.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 24 × AMD Ryzen 9 5900X 12-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 6800 XT
Comment 1 Pawel 2023-02-10 08:54:07 UTC
I have the below in journal:

Feb 10 07:25:24 arch-Bednar plasmashell[54631]: qt.qpa.wayland: Creating a fake screen in order for Qt not to crash
Feb 10 07:25:24 arch-Bednar plasmashell[54631]: file:///usr/share/plasma/plasmoids/org.kde.desktopcontainment/contents/ui/FolderItemDelegate.qml:387:21: Unable to assign [undefined] to bool
Feb 10 07:25:24 arch-Bednar plasmashell[54631]: file:///usr/share/plasma/plasmoids/org.kde.desktopcontainment/contents/ui/FolderItemDelegate.qml:500:25: Unable to assign [undefined] to bool
Feb 10 07:25:24 arch-Bednar plasmashell[54631]: qt.qpa.wayland: Wayland does not support QWindow::requestActivate()
Feb 10 07:25:24 arch-Bednar kcminit[77379]: qt.qpa.wayland: Creating a fake screen in order for Qt not to crash
Feb 10 07:25:25 arch-Bednar plasmashell[54631]: file:///usr/lib/qt/qml/org/kde/plasma/core/private/DefaultToolTip.qml:69:13: QML Label: Binding loop detected for property "verticalAlignment"
Feb 10 07:25:25 arch-Bednar plasmashell[54631]: file:///usr/lib/qt/qml/org/kde/plasma/core/private/DefaultToolTip.qml:59:13: QML Heading: Binding loop detected for property "verticalAlignment"
Feb 10 07:25:25 arch-Bednar kcminit[77356]: Initializing  "/usr/lib/qt/plugins/plasma/kcms/systemsettings/kcm_fonts.so"
Feb 10 07:25:25 arch-Bednar kcminit[77379]: Initializing  "/usr/lib/qt/plugins/plasma/kcms/systemsettings/kcm_fonts.so"
Feb 10 07:25:25 arch-Bednar plasmashell[54631]: qt.qpa.wayland: Wayland does not support QWindow::requestActivate()
Feb 10 07:25:25 arch-Bednar plasmashell[54631]: Checking screens: available: (QScreen(0x5624968b36b0, name="DP-1")) redundant: QHash() fake: QSet(QScreen(0x562494c177d0, name="")) all: (QScreen(0x562494c177d0, name=""), QScreen(0x5624968b36b0, name="DP-1"))
Feb 10 07:25:26 arch-Bednar kcminit[77439]: Initializing  "/usr/lib/qt/plugins/plasma/kcms/systemsettings/kcm_fonts.so"
Comment 2 Nate Graham 2023-02-12 17:28:50 UTC
> Creating a fake screen in order for Qt not to crash
> Checking screens: available: (QScreen(0x5624968b36b0, name="DP-1")) redundant: QHash() fake: QSet(QScreen(0x562494c177d0, name="")) all: (QScreen(0x562494c177d0, name=""), QScreen(0x5624968b36b0, name="DP-1"))

Seems quite related.

Is this system a single-screen setup, or a multi-screen setup?

Can you attach:
- the output of `kscreen-doctor -o`
- the output of `kscreen-console bug`
- the file `~/.config/plasma-org.kde.plasma.desktop-appletsrc`
Comment 3 Pawel 2023-02-13 08:45:39 UTC
Created attachment 156188 [details]
lscreen-console bug

Hi Nate,

I have only 1 screen connected; however, this wouldn't be the first time plasma thinks I have more than one. See Bug 456743.

> $ kscreen-doctor -o                                                                                                                                         
Output: 1 DP-1 enabled connected priority 1 DisplayPort Modes: 0:2560x1440@144*! 1:2560x1440@120 2:2560x1440@100 3:2560x1440@60 4:1920x1200@144 5:1920x1080@120 6:1920x1080@120 7:1920x1080@60 8:1920x1080@60 9:1920x1080@60 10:1920x1080@50 11:1600x1200@144 12:1680x1050@60 13:1280x1024@75 14:1280x1024@60 15:1440x900@60 16:1280x960@60 17:1280x800@144 18:1152x864@75 19:1280x720@120 20:1280x720@120 21:1280x720@60 22:1280x720@60 23:1280x720@60 24:1280x720@50 25:1440x576@50 26:1440x576@50 27:1024x768@75 28:1024x768@70 29:1024x768@60 30:1440x480@60 31:1440x480@60 32:1440x480@60 33:1440x480@60 34:800x600@75 35:800x600@72 36:800x600@60 37:800x600@56 38:720x576@50 39:720x576@50 40:720x480@60 41:720x480@60 42:720x480@60 43:720x480@60 44:640x480@75 45:640x480@73 46:640x480@67 47:640x480@60 48:640x480@60 49:640x480@60 50:720x400@70 51:1600x1200@60 52:1280x1024@60 53:1024x768@60 54:1920x1200@60 55:1280x800@60 56:2560x1440@60 57:1920x1080@60 58:1600x900@60 59:1368x768@60 60:1280x720@60 Geometry: 0,0 2560x1440 Scale: 1 Rotation: 1 Overscan: 0 Vrr: Automatic RgbRange: unknown
Comment 4 Pawel 2023-02-13 08:46:09 UTC
Created attachment 156189 [details]
plasma.desktop-appletsrc
Comment 5 Pawel 2023-02-13 08:47:10 UTC
I will also note this is a regression in 5.27 as this bug doesn't seem to affect 5.26.5
Comment 6 Marco Martin 2023-02-13 14:03:32 UTC
Is the screen displayport?
Comment 7 Marco Martin 2023-02-13 14:05:07 UTC
(In reply to Marco Martin from comment #6)
> Is the screen displayport?

ah, yes, it is
Comment 8 Marco Martin 2023-02-13 14:09:39 UTC
one thing i don't understand from the description:
are only "a few" icons missing, or there is no icon at all?

from the config, i see that if what i think it happens is true, for instance the entry called "My Stuff" should be visible, while for instance the one called wyniki.pdf is not visible?
Comment 9 Pawel 2023-02-13 14:15:50 UTC
(In reply to Marco Martin from comment #8)
> one thing i don't understand from the description:
> are only "a few" icons missing, or there is no icon at all?
> 
> from the config, i see that if what i think it happens is true, for instance
> the entry called "My Stuff" should be visible, while for instance the one
> called wyniki.pdf is not visible?

actually, none of the icons are visible.  The Desktop is simply blank - there aren't *any* visible items on the desktop.
Comment 10 Pawel 2023-02-13 18:37:02 UTC
Created attachment 156200 [details]
kscreen-console-bug

another thing I noticed is that after log in I seem to get an additional unlock button which after I click takes me to the desktop.
Also, I could have been seeing things, but I think desktop icons flashed for a milisecond before my e6yes as the desktop was showing, before disappearing; and again, ALL the icons disappeared. I am reattaching all of the logs again with the icons gone, fresh after I logged in after wake up from sleep.

journal:

Feb 13 19:29:45 arch-Bednar kcminit[33241]: qt.qpa.wayland: Creating a fake screen in order for Qt not to crash
Feb 13 19:29:45 arch-Bednar plasmashell[1889]: qt.qpa.wayland: Creating a fake screen in order for Qt not to crash
Feb 13 19:29:45 arch-Bednar plasmashell[1889]: file:///usr/share/plasma/plasmoids/org.kde.desktopcontainment/contents/ui/FolderItemDelegate.qml:500:25: Unable to assign [undefined] to bool
Feb 13 19:29:45 arch-Bednar plasmashell[1889]: qt.qpa.wayland: Wayland does not support QWindow::requestActivate()
Feb 13 19:29:45 arch-Bednar kcminit[33246]: qt.qpa.wayland: Creating a fake screen in order for Qt not to crash
Feb 13 19:29:45 arch-Bednar kcminit[33241]: Initializing  "/usr/lib/qt/plugins/plasma/kcms/systemsettings/kcm_fonts.so"
Feb 13 19:29:45 arch-Bednar kcminit[33246]: Initializing  "/usr/lib/qt/plugins/plasma/kcms/systemsettings/kcm_fonts.so"
Feb 13 19:29:46 arch-Bednar plasmashell[1889]: QSocketNotifier: Invalid socket 0 and type 'Read', disabling...
Feb 13 19:29:46 arch-Bednar plasmashell[1889]: qt.qpa.wayland: Wayland does not support QWindow::requestActivate()
Feb 13 19:29:46 arch-Bednar plasmashell[1889]: Checking screens: available: (QScreen(0x55abd4a57980, name="DP-1")) redundant: QHash() fake: QSet(QScreen(0x55abd5004ff0, name="")) all: (QScreen(0x55abd5004ff0, name=""), QScreen(0x55abd4a57980, name="DP-1"))
Feb 13 19:29:46 arch-Bednar kcminit[33294]: Initializing  "/usr/lib/qt/plugins/plasma/kcms/systemsettings/kcm_fonts.so"
Feb 13 19:29:54 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:30:01 arch-Bednar plasmashell[1889]: <Unknown File>: temperature0 is undefined. Adding an object with a undefined member does not create a role for it.
Feb 13 19:30:01 arch-Bednar plasmashell[1889]: <Unknown File>: iconName0 is undefined. Adding an object with a undefined member does not create a role for it.
Feb 13 19:30:01 arch-Bednar plasmashell[1889]: <Unknown File>: isPast0 is undefined. Adding an object with a undefined member does not create a role for it.
Feb 13 19:30:01 arch-Bednar plasmashell[1889]: <Unknown File>: temperature1 is undefined. Adding an object with a undefined member does not create a role for it.
Feb 13 19:30:01 arch-Bednar plasmashell[1889]: <Unknown File>: iconName1 is undefined. Adding an object with a undefined member does not create a role for it.
Feb 13 19:30:01 arch-Bednar plasmashell[1889]: <Unknown File>: isPast1 is undefined. Adding an object with a undefined member does not create a role for it.
Feb 13 19:30:01 arch-Bednar plasmashell[1889]: <Unknown File>: temperature2 is undefined. Adding an object with a undefined member does not create a role for it.
Feb 13 19:30:01 arch-Bednar plasmashell[1889]: <Unknown File>: iconName2 is undefined. Adding an object with a undefined member does not create a role for it.
Feb 13 19:30:01 arch-Bednar plasmashell[1889]: <Unknown File>: isPast2 is undefined. Adding an object with a undefined member does not create a role for it.
Feb 13 19:30:04 arch-Bednar plasmashell[1889]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/ToolTipInstance.qml:248:9: QML Image: https://i.ytimg.com
Feb 13 19:30:04 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:30:14 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:30:14 arch-Bednar plasmashell[1889]: QSocketNotifier: Invalid socket 0 and type 'Read', disabling...
Feb 13 19:30:24 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:30:34 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:30:44 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:30:54 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:31:04 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:31:14 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:31:24 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:31:34 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:31:44 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:31:54 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:32:04 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:32:14 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:32:24 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:32:34 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:32:44 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:32:54 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:33:04 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:33:14 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:33:24 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:33:35 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:33:45 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"
Feb 13 19:33:55 arch-Bednar plasmashell[1889]: "Object does not exist at path “/org/freedesktop/NetworkManager/ActiveConnection/2”"


> $ kscreen-doctor -o                                                                                                                                         
Output: 1 DP-1 enabled connected priority 1 DisplayPort Modes: 0:2560x1440@144*! 1:2560x1440@120 2:2560x1440@100 3:2560x1440@60 4:1920x1200@144 5:1920x1080@120 6:1920x1080@120 7:1920x1080@60 8:1920x1080@60 9:1920x1080@60 10:1920x1080@50 11:1600x1200@144 12:1680x1050@60 13:1280x1024@75 14:1280x1024@60 15:1440x900@60 16:1280x960@60 17:1280x800@144 18:1152x864@75 19:1280x720@120 20:1280x720@120 21:1280x720@60 22:1280x720@60 23:1280x720@60 24:1280x720@50 25:1440x576@50 26:1440x576@50 27:1024x768@75 28:1024x768@70 29:1024x768@60 30:1440x480@60 31:1440x480@60 32:1440x480@60 33:1440x480@60 34:800x600@75 35:800x600@72 36:800x600@60 37:800x600@56 38:720x576@50 39:720x576@50 40:720x480@60 41:720x480@60 42:720x480@60 43:720x480@60 44:640x480@75 45:640x480@73 46:640x480@67 47:640x480@60 48:640x480@60 49:640x480@60 50:720x400@70 51:1600x1200@60 52:1280x1024@60 53:1024x768@60 54:1920x1200@60 55:1280x800@60 56:2560x1440@60 57:1920x1080@60 58:1600x900@60 59:1368x768@60 60:1280x720@60 Geometry: 0,0 2560x1440 Scale: 1 Rotation: 1 Overscan: 0 Vrr: Automatic RgbRange: unknown
Comment 11 Pawel 2023-02-13 18:42:40 UTC
Created attachment 156201 [details]
plasma.desktop-appletsrc-v2

I don't know how to read this file but the below seems to indicate plasma thinks there are items on the desktop that aren't actually there:

[ScreenMapping]
itemsOnDisabledScreens=2,07f29669-3058-47a2-b029-8fcd1b7cc631,1,file:///home/bednar/Desktop/oświadczenie.odt,0,07f29669-3058-47a2-b029-8fcd1b7cc631,4,desktop:/Text File.txt,desktop:/plasma-org.kde.plasma.desktop-appletsrc,desktop:/ECA_blend_tn.zip,desktop:/kscreen-console-bug.txt,1,07f29669-3058-47a2-b029-8fcd1b7cc631,12,desktop:/kam_res_dat.txt,desktop:/paragon-31052.pdf,desktop:/orzeczenie.pdf,desktop:/wyniki.pdf,desktop:/ZY.pdf,desktop:/cache.txt,desktop:/New Folder,desktop:/okulary-faktura.pdf,desktop:/11Why You 101 Interview Questions You'll Never Fear Again.epub,desktop:/My Stuff,desktop:/event.txt,desktop:/faktura-313-09-2022.pdf

here's what on the desktop: https://i.imgur.com/yEtwQvi.png
Comment 12 Pawel 2023-02-13 18:51:00 UTC
adding a new file to the desktop via right click menu succeeds as in the file is there in /home/user/desktop but the desktop itself is still blank.

journal has the following:

Feb 13 19:48:20 arch-Bednar kioslave5[34993]: QObject::connect: No such slot DesktopProtocol::_k_slotRedirection(KIO::Job *, QUrl)
Feb 13 19:48:20 arch-Bednar kioslave5[34993]: QObject::connect: No such slot DesktopProtocol::_k_slotRedirection(KIO::Job *, QUrl)
Feb 13 19:48:20 arch-Bednar kioslave5[34993]: QObject::connect: No such slot DesktopProtocol::_k_slotRedirection(KIO::Job *, QUrl)
Feb 13 19:48:20 arch-Bednar kioslave5[35053]: kf.coreaddons: Expected a KPluginFactory, got a KIOPluginForMetaData
Feb 13 19:48:21 arch-Bednar kioslave5[34993]: QObject::connect: No such slot DesktopProtocol::_k_slotRedirection(KIO::Job *, QUrl)
Feb 13 19:48:21 arch-Bednar kioslave5[34993]: QObject::connect: No such slot DesktopProtocol::_k_slotRedirection(KIO::Job *, QUrl)

I am now in this file/icon-less state, so give me a shout if you want me to run anything.
Comment 13 Enrico 2023-02-13 19:43:30 UTC
Created attachment 156205 [details]
journalctl log after the crash

I also get this on Debian Sid, but in my case the problem is not the system standby but the *monitor* standby.

I boot the PC and the icons are fine.
The screen tries to go in standby (and then wake up immediately because of another bug)
The icons are not visible anymore.

This only happens in Wayland. One monitor, standard 16:9 1080p.
I attach my journalctl which seems pretty long. Feel free to ask if you need more informations

Operating System: Debian GNU/Linux 
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Kernel Version: 6.1.0-4-amd64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × 12th Gen Intel® Core™ i5-1240P
Memory: 7.4 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Comment 14 Bug Janitor Service 2023-02-14 09:20:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2615
Comment 15 Marco Martin 2023-02-14 10:11:23 UTC
Git commit a7deac657691f89cd3e05242b5fd30c88522ed95 by Marco Martin.
Committed on 14/02/2023 at 10:11.
Pushed by mart into branch 'master'.

If the desktopview is not deleted, don'r emit screenRemoved

Is very important that the screenRemoved and screenAdded signals
are symmetric, ie if a screenRemoved is emitted, when the screen goes back,
a corresponding screenAdded will be emitted as well, otherwise
everything that relies on those signals will end up in an incoherent state,
which is what happens to folderview

M  +4    -5    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/a7deac657691f89cd3e05242b5fd30c88522ed95
Comment 16 Bug Janitor Service 2023-02-14 15:23:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2620
Comment 17 Marco Martin 2023-02-14 18:22:48 UTC
Git commit 28a24cf79b0ba75fc482ee43e4c7b29ce0829382 by Marco Martin.
Committed on 14/02/2023 at 15:17.
Pushed by mart into branch 'master'.

revert a7deac65769, proper fix

don't inhibit screenRemoved, but emit screenadded also when recycling views

the autotests that were failling are right, if a screen is removed, corona's users
are right to expect one signal fora each screen has been removed
bug still fixex, tests now succeed

M  +5    -4    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/28a24cf79b0ba75fc482ee43e4c7b29ce0829382
Comment 18 Marco Martin 2023-02-15 08:33:04 UTC
Git commit e1969e8452a15f9c6b9d448fb358496e79811a50 by Marco Martin.
Committed on 15/02/2023 at 08:32.
Pushed by mart into branch 'Plasma/5.27'.

If the desktopview is not deleted, don'r emit screenRemoved

Is very important that the screenRemoved and screenAdded signals
are symmetric, ie if a screenRemoved is emitted, when the screen goes back,
a corresponding screenAdded will be emitted as well, otherwise
everything that relies on those signals will end up in an incoherent state,
which is what happens to folderview

M  +1    -1    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/e1969e8452a15f9c6b9d448fb358496e79811a50
Comment 19 Nate Graham 2023-02-17 18:55:22 UTC
*** Bug 465755 has been marked as a duplicate of this bug. ***
Comment 20 Valerio Galdo 2023-03-09 08:42:18 UTC
Created attachment 157137 [details]
attachment-4142586-0.html

Hi, i don't think it's  the same bug, because i can't see any files on
folderview also with a new installation of kde neon. My icons doesn't
disapperar after a wakeup from sleep. And if  i change from folderview to
desktopview and come back to folderview, then all works.

Il gio 9 mar 2023, 08:44 Pawel <bugzilla_noreply@kde.org> ha scritto:

> https://bugs.kde.org/show_bug.cgi?id=465536
>
> Pawel <bednarczyk.pawel@outlook.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>            See Also|                            |
> https://bugs.kde.org/show_b
>                    |                            |ug.cgi?id=467092
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 21 Valerio Galdo 2023-03-22 17:15:07 UTC
Created attachment 157519 [details]
attachment-1340654-0.html

Now i have plasma 5.27.3 but, paraphrasing the Led Zeppelin, the bug
remains the same...😁

Il gio 9 mar 2023, 09:41 Valerio Galdo <valerio.galdo@gmail.com> ha scritto:

> Hi, i don't think it's  the same bug, because i can't see any files on
> folderview also with a new installation of kde neon. My icons doesn't
> disapperar after a wakeup from sleep. And if  i change from folderview to
> desktopview and come back to folderview, then all works.
>
> Il gio 9 mar 2023, 08:44 Pawel <bugzilla_noreply@kde.org> ha scritto:
>
>> https://bugs.kde.org/show_bug.cgi?id=465536
>>
>> Pawel <bednarczyk.pawel@outlook.com> changed:
>>
>>            What    |Removed                     |Added
>>
>> ----------------------------------------------------------------------------
>>            See Also|                            |
>> https://bugs.kde.org/show_b
>>                    |                            |ug.cgi?id=467092
>>
>> --
>> You are receiving this mail because:
>> You are on the CC list for the bug.
>
>
Comment 22 Nate Graham 2023-03-27 18:11:20 UTC
Please submit a new bug report for that. Thanks!