If the desktopview is not deleted, don'r emit screenRemoved

Is very important that the screenRemoved and screenAdded signals
are symmetric, ie if a screenRemoved is emitted, when the screen goes back,
a corresponding screenAdded will be emitted as well, otherwise
everything that relies on those signals will end up in an incoherent state,
which is what happens to folderview

BUG:465536